# src/api/backend/apis/LocationManagementApi.ts
@@ -5,7 +5,7 @@
  * API for managing travel itineraries, locations, and social interactions
  *
  * The version of the OpenAPI document: 1.0.0
- *
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -18,7 +18,7 @@ import type {
   ImageUrlsDto,
   LocationDto,
   LocationImageUploadResponseDto,
-  MessageResponseDto2,
+  MessageResponseDto,
 } from '../models/index';
 import {
     ImageUrlsDtoFromJSON,
@@ -27,8 +27,8 @@ import {
     LocationDtoToJSON,
     LocationImageUploadResponseDtoFromJSON,
     LocationImageUploadResponseDtoToJSON,
-    MessageResponseDto2FromJSON,
-    MessageResponseDto2ToJSON,
+    MessageResponseDtoFromJSON,
+    MessageResponseDtoToJSON,
 } from '../models/index';
 
 export interface LocationItineraryItineraryIdGetRequest {
@@ -79,7 +79,7 @@ export interface LocationLocationIdImagesPostRequest {
 }
 
 /**
- *
+ * 
  */
 export class LocationManagementApi extends runtime.BaseAPI {
 
@@ -264,7 +264,7 @@ export class LocationManagementApi extends runtime.BaseAPI {
      * Deletes a location from an itinerary. Requires authentication.
      * Delete location
      */
-    async locationLocationIdDeleteRaw(requestParameters: LocationLocationIdDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<MessageResponseDto2>> {
+    async locationLocationIdDeleteRaw(requestParameters: LocationLocationIdDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<MessageResponseDto>> {
         if (requestParameters['locationId'] == null) {
             throw new runtime.RequiredError(
                 'locationId',
@@ -295,14 +295,14 @@ export class LocationManagementApi extends runtime.BaseAPI {
             query: queryParameters,
         }, initOverrides);
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => MessageResponseDto2FromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => MessageResponseDtoFromJSON(jsonValue));
     }
 
     /**
      * Deletes a location from an itinerary. Requires authentication.
      * Delete location
      */
-    async locationLocationIdDelete(requestParameters: LocationLocationIdDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<MessageResponseDto2> {
+    async locationLocationIdDelete(requestParameters: LocationLocationIdDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<MessageResponseDto> {
         const response = await this.locationLocationIdDeleteRaw(requestParameters, initOverrides);
         return await response.value();
     }
@@ -414,7 +414,7 @@ export class LocationManagementApi extends runtime.BaseAPI {
      * Deletes a specific image from a location by its URL. Requires authentication.
      * Delete image from location
      */
-    async locationLocationIdImagesDeleteRaw(requestParameters: LocationLocationIdImagesDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<MessageResponseDto2>> {
+    async locationLocationIdImagesDeleteRaw(requestParameters: LocationLocationIdImagesDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<MessageResponseDto>> {
         if (requestParameters['locationId'] == null) {
             throw new runtime.RequiredError(
                 'locationId',
@@ -456,14 +456,14 @@ export class LocationManagementApi extends runtime.BaseAPI {
             query: queryParameters,
         }, initOverrides);
 
-        return new runtime.JSONApiResponse(response, (jsonValue) => MessageResponseDto2FromJSON(jsonValue));
+        return new runtime.JSONApiResponse(response, (jsonValue) => MessageResponseDtoFromJSON(jsonValue));
     }
 
     /**
      * Deletes a specific image from a location by its URL. Requires authentication.
      * Delete image from location
      */
-    async locationLocationIdImagesDelete(requestParameters: LocationLocationIdImagesDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<MessageResponseDto2> {
+    async locationLocationIdImagesDelete(requestParameters: LocationLocationIdImagesDeleteRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<MessageResponseDto> {
         const response = await this.locationLocationIdImagesDeleteRaw(requestParameters, initOverrides);
         return await response.value();
     }
