# src/api/backend/models/CommentRequest.ts
@@ -1,73 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Travel App API
- * API for managing travel itineraries, locations, and social interactions
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * 
- * @export
- * @interface CommentRequest
- */
-export interface CommentRequest {
-    /**
-     * 
-     * @type {string}
-     * @memberof CommentRequest
-     */
-    userEmail?: string;
-    /**
-     * 
-     * @type {string}
-     * @memberof CommentRequest
-     */
-    comment?: string;
-}
-
-/**
- * Check if a given object implements the CommentRequest interface.
- */
-export function instanceOfCommentRequest(value: object): value is CommentRequest {
-    return true;
-}
-
-export function CommentRequestFromJSON(json: any): CommentRequest {
-    return CommentRequestFromJSONTyped(json, false);
-}
-
-export function CommentRequestFromJSONTyped(json: any, ignoreDiscriminator: boolean): CommentRequest {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'userEmail': json['userEmail'] == null ? undefined : json['userEmail'],
-        'comment': json['comment'] == null ? undefined : json['comment'],
-    };
-}
-
-export function CommentRequestToJSON(json: any): CommentRequest {
-    return CommentRequestToJSONTyped(json, false);
-}
-
-export function CommentRequestToJSONTyped(value?: CommentRequest | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'userEmail': value['userEmail'],
-        'comment': value['comment'],
-    };
-}
-
