# src/api/backend/models/MessageResponseDto1.ts
@@ -1,65 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Travel App API
- * API for managing travel itineraries, locations, and social interactions
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * Response object for successful operations
- * @export
- * @interface MessageResponseDto1
- */
-export interface MessageResponseDto1 {
-    /**
-     * Success or info message
-     * @type {string}
-     * @memberof MessageResponseDto1
-     */
-    message?: string;
-}
-
-/**
- * Check if a given object implements the MessageResponseDto1 interface.
- */
-export function instanceOfMessageResponseDto1(value: object): value is MessageResponseDto1 {
-    return true;
-}
-
-export function MessageResponseDto1FromJSON(json: any): MessageResponseDto1 {
-    return MessageResponseDto1FromJSONTyped(json, false);
-}
-
-export function MessageResponseDto1FromJSONTyped(json: any, ignoreDiscriminator: boolean): MessageResponseDto1 {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'message': json['message'] == null ? undefined : json['message'],
-    };
-}
-
-export function MessageResponseDto1ToJSON(json: any): MessageResponseDto1 {
-    return MessageResponseDto1ToJSONTyped(json, false);
-}
-
-export function MessageResponseDto1ToJSONTyped(value?: MessageResponseDto1 | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'message': value['message'],
-    };
-}
-
