# src/api/backend/models/MessageResponseDto2.ts
@@ -1,65 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-/**
- * Travel App API
- * API for managing travel itineraries, locations, and social interactions
- *
- * The version of the OpenAPI document: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-import { mapValues } from '../runtime';
-/**
- * Response object for successful operations
- * @export
- * @interface MessageResponseDto2
- */
-export interface MessageResponseDto2 {
-    /**
-     * Success or info message
-     * @type {string}
-     * @memberof MessageResponseDto2
-     */
-    message?: string;
-}
-
-/**
- * Check if a given object implements the MessageResponseDto2 interface.
- */
-export function instanceOfMessageResponseDto2(value: object): value is MessageResponseDto2 {
-    return true;
-}
-
-export function MessageResponseDto2FromJSON(json: any): MessageResponseDto2 {
-    return MessageResponseDto2FromJSONTyped(json, false);
-}
-
-export function MessageResponseDto2FromJSONTyped(json: any, ignoreDiscriminator: boolean): MessageResponseDto2 {
-    if (json == null) {
-        return json;
-    }
-    return {
-        
-        'message': json['message'] == null ? undefined : json['message'],
-    };
-}
-
-export function MessageResponseDto2ToJSON(json: any): MessageResponseDto2 {
-    return MessageResponseDto2ToJSONTyped(json, false);
-}
-
-export function MessageResponseDto2ToJSONTyped(value?: MessageResponseDto2 | null, ignoreDiscriminator: boolean = false): any {
-    if (value == null) {
-        return value;
-    }
-
-    return {
-        
-        'message': value['message'],
-    };
-}
-
